# juce-3-band-multi-effect-vst

./: 3BandMultiEffector.filtergraph  3BandMultiEffector.jucer
.github/workflows/: windows-build.yml
Builds/MacOSX/: CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
